__pycache__/error
(.venv) PS C:\Users\KANSUL\Desktop\voice-agent> streamlit run streamlit_app.py

  You can now view your Streamlit app in your browser.

  Local URL: http://localhost:8501
  Network URL: http://10.137.20.153:8501

2026-03-09 13:32:55.951 Script compilation error
Traceback (most recent call last):
  File "C:\Users\KANSUL\Desktop\voice-agent\.venv\Lib\site-packages\streamlit\runtime\scriptrunner\script_runner.py", line 591, in _run_script
    code = self._script_cache.get_bytecode(script_path)
           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "C:\Users\KANSUL\Desktop\voice-agent\.venv\Lib\site-packages\streamlit\runtime\scriptrunner\script_cache.py", line 72, in get_bytecode
    filebody = magic.add_magic(filebody, script_path)
               ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "C:\Users\KANSUL\Desktop\voice-agent\.venv\Lib\site-packages\streamlit\runtime\scriptrunner\magic.py", line 45, in add_magic
    tree = ast.parse(code, script_path, "exec")
           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "C:\Users\KANSUL\AppData\Local\Python\pythoncore-3.11-64\Lib\ast.py", line 50, in parse
    return compile(source, filename, mode, flags,
           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "C:\Users\KANSUL\Desktop\voice-agent\streamlit_app.py", line 7
    from voice-live-quickstart import BasicVoiceAssistant
              ^
SyntaxError: invalid syntax
2026-03-09 13:32:55.978 Thread 'MainThread': missing ScriptRunContext! This warning can be ignored when running in bare mode.
